@@ -1,6 +1,6 @@
 /*
  * SonarLint Language Server
- * Copyright (C) 2009-2020 SonarSource SA
+ * Copyright (C) 2009-2023 SonarSource SA
  * mailto:info AT sonarsource DOT com
  *
  * This program is free software; you can redistribute it and/or
@@ -19,11 +19,16 @@
  */
 package org.sonarsource.sonarlint.ls.connected;
 
-import java.util.Collections;
+import java.util.List;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.sonarsource.sonarlint.core.client.api.common.analysis.ClientInputFile;
+import org.sonarsource.sonarlint.core.analysis.api.ClientInputFile;
+import org.sonarsource.sonarlint.core.analysis.api.Flow;
 import org.sonarsource.sonarlint.core.client.api.common.analysis.Issue;
+import org.sonarsource.sonarlint.core.commons.IssueSeverity;
+import org.sonarsource.sonarlint.core.commons.RuleType;
+import org.sonarsource.sonarlint.core.commons.TextRangeWithHash;
+import org.sonarsource.sonarlint.core.issuetracking.Trackable;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.Mockito.mock;
@@ -31,76 +36,89 @@ import static org.mockito.Mockito.when;
 
 class DelegatingIssueTests {
 
-  private Issue issue = mock(Issue.class);
-  private DelegatingIssue delegatingIssue = new DelegatingIssue(issue);
+  private final Trackable<Issue> trackable = mock(Trackable.class);
+  private final TextRangeWithHash textRange = mock(TextRangeWithHash.class);
+  private final Issue issue = mock(Issue.class);
+  private DelegatingIssue delegatingIssue;
 
   @BeforeEach
   public void prepare() {
-    when(issue.getSeverity()).thenReturn("BLOCKER");
-    when(issue.getType()).thenReturn("BUG");
+    when(issue.getSeverity()).thenReturn(IssueSeverity.BLOCKER);
+    when(trackable.getType()).thenReturn(RuleType.BUG);
     when(issue.getMessage()).thenReturn("don't do this");
     when(issue.getRuleKey()).thenReturn("squid:123");
-    when(issue.getRuleName()).thenReturn("don't do that");
+    when(issue.getTextRange()).thenReturn(textRange);
     when(issue.getStartLine()).thenReturn(2);
     when(issue.getStartLineOffset()).thenReturn(3);
     when(issue.getEndLine()).thenReturn(4);
     when(issue.getEndLineOffset()).thenReturn(5);
-    when(issue.flows()).thenReturn(Collections.singletonList(mock(Issue.Flow.class)));
+    when(trackable.getClientObject()).thenReturn(issue);
+    when(issue.flows()).thenReturn(List.of(mock(Flow.class)));
     when(issue.getInputFile()).thenReturn(mock(ClientInputFile.class));
+    when(trackable.getTextRange()).thenReturn(mock(TextRangeWithHash.class));
+    delegatingIssue = new DelegatingIssue(trackable);
   }
 
   @Test
-  public void testGetSeverity() {
-    assertThat(delegatingIssue.getSeverity()).isNotEmpty().isEqualTo(issue.getSeverity());
+  void testGetSeverity() {
+    assertThat(delegatingIssue.getSeverity()).isEqualTo(issue.getSeverity());
   }
 
   @Test
-  public void testGetType() {
-    assertThat(delegatingIssue.getType()).isNotEmpty().isEqualTo(issue.getType());
+  void testGetUserSeverity() {
+    when(trackable.getSeverity()).thenReturn(IssueSeverity.INFO);
+    var delegatingIssueWithUserSeverity = new DelegatingIssue(trackable);
+
+    assertThat(delegatingIssueWithUserSeverity.getSeverity()).isEqualTo(IssueSeverity.INFO);
   }
 
   @Test
-  public void testGetMessage() {
+  void testGetType() {
+    assertThat(delegatingIssue.getType()).isEqualTo(trackable.getType());
+  }
+
+  @Test
+  void testGetMessage() {
     assertThat(delegatingIssue.getMessage()).isNotEmpty().isEqualTo(issue.getMessage());
   }
 
   @Test
-  public void testGetRuleKey() {
+  void testGetRuleKey() {
     assertThat(delegatingIssue.getRuleKey()).isNotEmpty().isEqualTo(issue.getRuleKey());
   }
 
   @Test
-  public void testGetRuleName() {
-    assertThat(delegatingIssue.getRuleName()).isNotEmpty().isEqualTo(issue.getRuleName());
+  void testGetStartLine() {
+    assertThat(delegatingIssue.getStartLine()).isPositive().isEqualTo(issue.getStartLine());
   }
 
   @Test
-  public void testGetStartLine() {
-    assertThat(delegatingIssue.getStartLine()).isGreaterThan(0).isEqualTo(issue.getStartLine());
+  void testGetStartLineOffset() {
+    assertThat(delegatingIssue.getStartLineOffset()).isPositive().isEqualTo(issue.getStartLineOffset());
   }
 
   @Test
-  public void testGetStartLineOffset() {
-    assertThat(delegatingIssue.getStartLineOffset()).isGreaterThan(0).isEqualTo(issue.getStartLineOffset());
+  void testGetEndLine() {
+    assertThat(delegatingIssue.getEndLine()).isPositive().isEqualTo(issue.getEndLine());
   }
 
   @Test
-  public void testGetEndLine() {
-    assertThat(delegatingIssue.getEndLine()).isGreaterThan(0).isEqualTo(issue.getEndLine());
+  void testGetEndLineOffset() {
+    assertThat(delegatingIssue.getEndLineOffset()).isPositive().isEqualTo(issue.getEndLineOffset());
   }
 
   @Test
-  public void testGetEndLineOffset() {
-    assertThat(delegatingIssue.getEndLineOffset()).isGreaterThan(0).isEqualTo(issue.getEndLineOffset());
-  }
-
-  @Test
-  public void testFlows() {
+  void testFlows() {
     assertThat(delegatingIssue.flows()).isNotEmpty().isEqualTo(issue.flows());
   }
 
   @Test
-  public void testGetInputFile() {
+  void testGetInputFile() {
     assertThat(delegatingIssue.getInputFile()).isNotNull().isEqualTo(issue.getInputFile());
+  }
+
+  @Test
+  void testGetTextRange() {
+    assertThat(delegatingIssue.getTextRange()).isNotNull().isEqualTo(issue.getTextRange());
   }
 }
